@@ -207,6 +207,9 @@
       \code{refClass}es.
 
       \item \code{identical()} now also looks at the S4 bit.
+
+      \item objects like \code{getClass("refClass")@prototype} now
+      \code{print()} and \code{str()} without error.
     }
   }
 }
